devel
-----

* Added WINDOW keyword to AQL to allow aggregations on related rows.

* Added new graph method K_PATHS to AQL. This will enumerate all paths between a
  source and a target vertex that match the given length.
  For example, the query
  ```
    FOR path IN 2..4 OUTBOUND K_PATHS "v/source" TO "v/target" GRAPH "g"
      RETURN path
  ```
  will yield all paths in format
    {
      vertices: [v/source, ... , v/target],
      edges: [v/source -> v/1, ...,  v/n -> v/target
    }
  that have length exactly 2 or 3 or 4, start at v/source and end at v/target.
  The order of those paths in the result set is not guaranteed.

* Fixed issue BTS-195: AQL update queries using the `keepNull` option set to
  false had an inconsistent behavior. For example, given a collection `test`
  with an empty document with just key `testDoc`, the following query
  would return different results when running for the first time or the second
  time:

      UPDATE 'testDoc' 
          WITH {test: {sub1: true, sub2: null}} IN test
      OPTIONS { keepNull: false, mergeObjects: true }

  For its first run, the query would return

      {
        "_key": "testDoc",
        "test": {
          "sub1": true,
          "sub2": null
        }
      }

  (with the `null` attribute value not being removed). For all subsequent runs, 
  the same query would return
      
      {
        "_key": "testDoc",
        "test": {
          "sub1": true,
        }
      }

  (with the `null` value removed as requested). 

  This inconsistency was due to how the `keepNull` attribute was handled if
  the attribute already existed in the to-be-updated document or not. The 
  behavior is now consistent, so `null` values are now properly removed from 
  sub-attributes even if in the to-be-updated document the target attribute
  did not yet exist. This makes such updates idempotent again.

  This a behavior change compared previous versions, but it will only have