@@ -33,6 +33,9 @@ var arangodb = require("@arangodb");
 var db = arangodb.db;
 var internal = require("internal");
 
+const {ERROR_QUERY_COLLECTION_LOCK_FAILED} = internal.errors;
+
+
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief test suite
 ////////////////////////////////////////////////////////////////////////////////
@@ -55,7 +58,6 @@ function ahuacatlFailureSuite () {
   };
         
   return {
-
     setUpAll: function () {
       internal.debugClearFailAt();
       db._drop(cn);
@@ -74,50 +76,88 @@ function ahuacatlFailureSuite () {
       db._drop(en);
     },
 
-    tearDown: function() {
+    tearDown: function () {
       internal.debugClearFailAt();
     },
 
-    testQueryRegistryInsert1 : function () {
+    testQueryRegistryInsert1: function () {
       internal.debugSetFailAt("QueryRegistryInsertException1");
       // we need a diamond-query to trigger an insertion into the q-registry
-      assertFailingQuery("FOR doc1 IN " + cn + " FOR doc2 IN " + cn + " FILTER doc1._key != doc2._key RETURN 1", internal.errors.ERROR_CLUSTER_AQL_COMMUNICATION);
+      assertFailingQuery(
+        "FOR doc1 IN " +
+          cn +
+          " FOR doc2 IN " +
+          cn +
+          " FILTER doc1._key != doc2._key RETURN 1",
+        internal.errors.ERROR_CLUSTER_AQL_COMMUNICATION
+      );
     },
-    
-    testQueryRegistryInsert2 : function () {
+
+    testQueryRegistryInsert2: function () {
       internal.debugSetFailAt("QueryRegistryInsertException2");
       // we need a diamond-query to trigger an insertion into the q-registry
-      assertFailingQuery("FOR doc1 IN " + cn + " FOR doc2 IN " + cn + " FILTER doc1._key != doc2._key RETURN 1", internal.errors.ERROR_CLUSTER_AQL_COMMUNICATION);
+      assertFailingQuery(
+        "FOR doc1 IN " +
+          cn +
+          " FOR doc2 IN " +
+          cn +
+          " FILTER doc1._key != doc2._key RETURN 1",
+        internal.errors.ERROR_CLUSTER_AQL_COMMUNICATION
+      );
     },
-    
-    testShutdownSync : function () {
+
+    testShutdownSync: function () {
       internal.debugSetFailAt("ExecutionEngine::shutdownSync");
 
       let res = AQL_EXECUTE("FOR doc IN " + cn + " RETURN doc").json;
       // no real test expectations here, just that the query works and doesn't fail on shutdown
       assertEqual(0, res.length);
     },
-    
-    testShutdownSyncDiamond : function () {
+
+    testShutdownSyncDiamond: function () {
       internal.debugSetFailAt("ExecutionEngine::shutdownSync");
 
-      let res = AQL_EXECUTE("FOR doc1 IN " + cn + " FOR doc2 IN " + en + " FILTER doc1._key == doc2._key RETURN doc1").json;
+      let res = AQL_EXECUTE(
+        "FOR doc1 IN " +
+          cn +
+          " FOR doc2 IN " +
+          en +
+          " FILTER doc1._key == doc2._key RETURN doc1"
+      ).json;
       // no real test expectations here, just that the query works and doesn't fail on shutdown
       assertEqual(0, res.length);
     },
-    
-    testShutdownSyncFailInGetSome : function () {
+
+    testShutdownSyncFailInGetSome: function () {
       internal.debugSetFailAt("ExecutionEngine::shutdownSync");
       internal.debugSetFailAt("RestAqlHandler::getSome");
 
       assertFailingQuery("FOR doc IN " + cn + " RETURN doc");
     },
 
-    testShutdownSyncDiamondFailInGetSome : function () {
+    testShutdownSyncDiamondFailInGetSome: function () {
       internal.debugSetFailAt("ExecutionEngine::shutdownSync");
       internal.debugSetFailAt("RestAqlHandler::getSome");
 
-      assertFailingQuery("FOR doc1 IN " + cn + " FOR doc2 IN " + en + " FILTER doc1._key == doc2._key RETURN doc1");
+      assertFailingQuery(
+        "FOR doc1 IN " +
+          cn +
+          " FOR doc2 IN " +
+          en +
+          " FILTER doc1._key == doc2._key RETURN doc1"
+      );
+    },
+
+    testNoShardsReturned: function () {
+      internal.debugSetFailAt("ClusterInfo::failedToGetShardList");
+      assertFailingQuery(
+        "FOR doc1 IN " +
+          cn +
+          " FOR doc2 IN " +
+          en +
+          " FILTER doc1._key == doc2._key RETURN doc1",
+        ERROR_QUERY_COLLECTION_LOCK_FAILED
+      );
     },
   };
 }
