@@ -1,6 +1,10 @@
 devel
 -----
 
+* If a collection (or database) is dropped during the instantiation of an AQL query,
+  the setup code now aborts with an ERROR_QUERY_COLLECTION_LOCK_FAILED and earlier.
+  Before the setup code could abort with TRI_ERROR_INTERNAL in the same case.
+
 * Added WINDOW keyword to AQL to allow aggregations on related rows.
 
 * Added new graph method K_PATHS to AQL. This will enumerate all paths between a
